# project-sesc

./: .gitignore  CMakeLists.txt  README.md  game_server.py  interrogation_structure.md  main.cpp  requirements.txt  server_config.json  tools.py  websocket_server.py
assets/ini_files/: advanced.ini
assets/wad/: default.wad
include/app/: app.h
include/gfx/: mesh-render-data.h  mesh.h  raw-triangle.h  render-data.h  renderer3d.h  texture-render-data.h  triangle.h
include/gfx/components/: mesh-renderer.h  renderer.h  texture-renderer.h
include/gmpl/: component.h  entity.h  scene.h
include/gmpl/components/: behaviour.h  transform.h  utils.h
include/ini_parser/: ini_parser.h
include/logger/: logger.h
include/math/: matrix4x4.h  vec2.h  vec3.h
include/utils/: funcs.h
include/window/: audio.h  drawer-sdl.h  drawer.h  input.h  sprite.h  texture.h  window.h
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp
src/gfx/: CMakeLists.txt  mesh-render-data.cpp  mesh.cpp  mesh.h  render-data.cpp  renderer.cpp  renderer.h  renderer3d.cpp  texture-render-data.cpp
src/gfx/components/: mesh-renderer.cpp  renderer.cpp  texture-renderer.cpp
src/gmpl/: CMakeLists.txt  component.cpp  entity.cpp  entity.h  scene.cpp  scene.h
src/gmpl/components/: transform.cpp  utils.cpp
src/ini_parser/: CmakeLists.txt  ini_parser.cpp
src/math/: CMakeLists.txt  matrix4x4.cpp  matrix4x4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/window/: ;  CMakeLists.txt  audio.cpp  drawer-sdl.cpp  drawer.cpp  input.cpp  sprite.cpp  sprite.h  texture.cpp  window.cpp  window.h
testing/: conftest.py  server_test.py  test_config.json
